Closed
Bug 1612683
Opened 5 years ago
Closed 5 years ago
Perma WARNING: Trying to request nsIHttpChannel from DocumentChannel, this is likely broken: file /builds/worker/workspace/build/src/netwerk/ipc/DocumentChannel.cpp, line 63
Categories
(Core :: Networking, defect, P3)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla75
Tracking | Status | |
---|---|---|
firefox75 | --- | fixed |
People
(Reporter: aryx, Assigned: mattwoodrow)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [necko-triaged])
Attachments
(1 file)
Since bug 1556489 landed, debug test tasks contain WARNING: Trying to request nsIHttpChannel from DocumentChannel, this is likely broken: file /builds/worker/workspace/build/src/netwerk/ipc/DocumentChannel.cpp, line 63
often. At least for reftests, this is printed once per tests (nothing else gets printed except the start, load and end of those tests).
If the message is printed for every run, does it currently provide any value or could it get disabled?
Flags: needinfo?(matt.woodrow)
Assignee | ||
Updated•5 years ago
|
Assignee: nobody → matt.woodrow
Flags: needinfo?(matt.woodrow)
Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Priority: -- → P3
Whiteboard: [necko-triaged]
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6869ca9ddf1e
Remove assertions around QI'ing DocumentChannel, since they're no longer adding value. r=jya
Comment 4•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox75:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Updated•5 years ago
|
Has Regression Range: --- → yes
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•