Bug 1612683 - Remove assertions around QI'ing DocumentChannel, since they're no longer adding value. r=jya

Differential Revision: https://phabricator.services.mozilla.com/D63280